src/references/snapshots/rnix_analyzer__references__tests__collect_identifiers_function_pattern.snap
---
source: src/references/mod.rs
expression: identifiers
---
[
    Identifier {
        name: "a",
        text_range: [1; 2),
    },
    Identifier {
        name: "a",
        text_range: [9; 10),
    },
]
