src/references/snapshots/rnix_analyzer__references__tests__collect_identifiers_let_in_object.snap
---
source: src/references/mod.rs
expression: identifiers
---
[
    Identifier {
        name: "a",
        text_range: [4; 5),
    },
    Identifier {
        name: "a",
        text_range: [16; 17),
    },
]
