src/references/snapshots/rnix_analyzer__references__tests__collect_identifiers_object.snap
---
source: src/references/mod.rs
expression: identifiers
---
[
    Identifier {
        name: "b",
        text_range: [0; 1),
    },
    Identifier {
        name: "b",
        text_range: [39; 40),
    },
]
