src/references/snapshots/rnix_analyzer__references__tests__collect_identifiers_rec_object.snap
---
source: src/references/mod.rs
expression: identifiers
---
[
    Identifier {
        name: "b",
        text_range: [0; 1),
    },
    Identifier {
        name: "a",
        text_range: [21; 22),
    },
    Identifier {
        name: "b",
        text_range: [43; 44),
    },
    Identifier {
        name: "c",
        text_range: [64; 65),
    },
]
