src/references/snapshots/rnix_analyzer__references__tests__collect_identifiers_simple_function.snap
---
source: src/references/mod.rs
expression: identifiers
---
[
    Identifier {
        name: "a",
        text_range: [0; 1),
    },
    Identifier {
        name: "a",
        text_range: [3; 4),
    },
]
