src/references/snapshots/rnix_analyzer__references__tests__error_undefined_reference_simple_function.snap
---
source: src/references/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\", nix_code, errors)"

---
a: b
=========
[
    Reference(
        NotFoundInScope(
            "b",
            3..4,
        ),
    ),
]
