src/references/snapshots/rnix_analyzer__references__tests__references_inherit_from.snap
---
source: src/references/mod.rs
expression: references.0
---
References {
    identifiers: [
        Identifier {
            name: "a",
            text_range: [4; 5),
        },
        Identifier {
            name: "a",
            text_range: [27; 28),
        },
    ],
    references: {
        Identifier {
            name: "a",
            text_range: [4; 5),
        }: Reference {
            from: Identifier {
                name: "a",
                text_range: [4; 5),
            },
            to: Definition {
                id: 0,
                name: "a",
                text_range: [4; 5),
            },
        },
        Identifier {
            name: "a",
            text_range: [27; 28),
        }: Reference {
            from: Identifier {
                name: "a",
                text_range: [27; 28),
            },
            to: Definition {
                id: 0,
                name: "a",
                text_range: [4; 5),
            },
        },
    },
}
