src/references/snapshots/rnix_analyzer__references__tests__references_let_in.snap
---
source: src/references/mod.rs
expression: references.0
---
References {
    identifiers: [
        Identifier {
            name: "a",
            text_range: [4; 5),
        },
        Identifier {
            name: "a",
            text_range: [14; 15),
        },
    ],
    references: {
        Identifier {
            name: "a",
            text_range: [4; 5),
        }: Reference {
            from: Identifier {
                name: "a",
                text_range: [4; 5),
            },
            to: Definition {
                id: 16,
                name: "a",
                text_range: [4; 5),
            },
        },
        Identifier {
            name: "a",
            text_range: [14; 15),
        }: Reference {
            from: Identifier {
                name: "a",
                text_range: [14; 15),
            },
            to: Definition {
                id: 16,
                name: "a",
                text_range: [4; 5),
            },
        },
    },
}
