src/references/snapshots/rnix_analyzer__references__tests__references_object_contains_path.snap
---
source: src/references/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\\n=========\\n{:#?}\", nix_code, variables, result\n        . references . references)"

---
let a.b = 1; in a ? c.d
=========
[
    Variable {
        id: Id {
            idx: 0,
        },
        name: "a",
        text_range: 4..5,
    },
    Variable {
        id: Id {
            idx: 1,
        },
        name: "a",
        text_range: 16..17,
    },
]
=========
{
    Id {
        idx: 0,
    }: Reference {
        from: Id {
            idx: 0,
        },
        to: Id {
            idx: 16,
        },
    },
    Id {
        idx: 1,
    }: Reference {
        from: Id {
            idx: 1,
        },
        to: Id {
            idx: 16,
        },
    },
}
